--- a/assets/vars.css
+++ b/assets/vars.css
@@ -1,5 +1,5 @@
 :root {
-    --name: littn3r;
+    --name: pemo;
     --description: So, what are you doing here?;
     --text-color: #fff;
     --back-color: #fff3;
